LU-20082 lnet: fix buffer assignment in lnet_sock_setbuf

When setting tx/rx buffer sizes via lnet_sock_setbuf(), `rxbufsize`
was incorrectly assigned to `sk->sk_sndbuf`, causing both send and
receive buffers to behave unexpectedly.

Fixes: 99d9638d6c ("LU-13783 libcfs: support removal of kernel_setsockopt()")
Signed-off-by: Xinxia Qu <xqu@ddn.com>
Change-Id: I8152a86809886857503b9982eda3f9b15388aa3a
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65119
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Serguei Smirnov <ssmirnov@thelustrecollective.com>
Reviewed-by: Cyril Bordage <cbordage@whamcloud.com>